--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "babel-plugin-flow-react-proptypes": "^0.19.0",
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-react-native": "^1.9.1",
-    "react-native-root-siblings": "^1.1.2",
+    "react-native-root-siblings": "https://github.com/carpages/react-native-root-siblings#9bf3761",
     "react-timer-mixin": "^0.13.3",
     "react-mixin": "^2.0.2",
     "rimraf": "^2.5.4"
