--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prepublish": "npm run build",
     "clean": "rimraf dist",
-    "build": "npm run clean && babel src --out-dir dist --source-maps",
+    "build": "npm run clean",
     "start": "node dist/index.js",
     "check": "npm run lint && npm run flow && npm test",
     "lint": "standard --fix",
